--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "Anuj",
     "Agrawal"
   ],
-  "author": "Anuj Agrawal",
+  "author": "Yash Raj Singh",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
